# quirehub-core

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  requirements.dev.txt
.github/workflows/: check-and-test.yaml
src/core/base/: apps.py  managers.py  models.py
src/core/choirs/: apps.py  models.py
src/core/users/: admin.py  apps.py  managers.py  models.py  validators.py
src/core/users/migrations/: 0001_initial.py
tests/: settings.py
tests/core/base/: test_models.py
tests/core/users/: test_models.py  test_validators.py
